[package]
name = "frusk"
version = "0.0.1"
authors = ["coil398 <konayuta.sou@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A web application framework working like flask"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frusk-core = { path = "../frusk-core" }
